# crypto-tax-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-service/: requirements.txt
ai-service/app/: main.py
ai-service/app/api/: routes.py
ai-service/app/clients/: groq_client.py
ai-service/app/prompts/: classify.py  report.py
ai-service/app/services/: classifier.py  report_generator.py
coingecko-rate-service/: .dockerignore  .env.example  Dockerfile  README.md
coingecko-rate-service/app/: __init__.py  main.py
coingecko-rate-service/app/api/: routes.py
coingecko-rate-service/app/clients/: coingecko.py
coingecko-rate-service/app/core/: config.py  errors.py
coingecko-rate-service/app/schemas/: common.py  rates.py
coingecko-rate-service/app/services/: rate_resolver.py
coingecko-rate-service/tests/: test_api.py
contract/: contract-README.md
contracts/: ReportVerifier.sol
etherscan-wallet-service/: README.md  pyproject.toml
etherscan-wallet-service/app/api/: routes.py
etherscan-wallet-service/app/clients/: etherscan.py
etherscan-wallet-service/app/core/: __init__.py  config.py  errors.py
etherscan-wallet-service/app/schemas/: transactions.py
etherscan-wallet-service/tests/: conftest.py  test_api.py  test_mappers.py
orchestrator/: main.py
services/etherscan-wallet-service/: Dockerfile
services/etherscan-wallet-service/app/: __init__.py  main.py
telegram-bot/: .env.example
telegram-bot-v2/: Dockerfile  docker-compose.bot.yml  requirements.txt
telegram-bot-v2/app/: main.py
telegram-bot/app/: states.py
(+10 files in other folders)
